# openeb

./: CMakeLists.txt  README.md
.github/workflows/: upload_datasets.yaml
cmake/custom_functions/: python3.cmake
hal_framos_imx636_plugin/: CMakeLists.txt  CMakeLists.txt.install
hal_framos_imx636_plugin/include/: framos_imx636_camera_discovery.h  framos_imx636_data_transfer.h  framos_imx636_device.h  framos_imx636_device_control.h  framos_imx636_file_discovery.h  framos_imx636_geometry.h  framos_imx636_hw_identification.h  framos_imx636_ll_biases.h  framos_imx636_roi.h
hal_framos_imx636_plugin/src/: framos_imx636_camera_discovery.cpp  framos_imx636_data_transfer.cpp  framos_imx636_device.cpp  framos_imx636_device_control.cpp  framos_imx636_file_discovery.cpp  framos_imx636_geometry.cpp  framos_imx636_hw_identification.cpp  framos_imx636_ll_biases.cpp  framos_imx636_plugin.cpp  framos_imx636_roi.cpp
hal_psee_plugins/include/boards/v4l2/: v4l2_camera_discovery.h  v4l2_device.h  v4l2_device_mmap.h
hal_psee_plugins/include/devices/gen31/: gen31_ccam5_tz_device.h  gen31_evk2_tz_device.h
hal_psee_plugins/include/devices/gen41/: gen41_evk2_tz_device.h  gen41_tz_device.h
hal_psee_plugins/include/devices/genx320/: genx320_cx3_tz_device.h
hal_psee_plugins/include/devices/imx636/: imx636_evk2_tz_device.h  imx636_tz_device.h
hal_psee_plugins/include/devices/imx646/: imx646_tz_device.h
hal_psee_plugins/include/devices/treuzell/: tz_unknown.h
hal_psee_plugins/lib/: CMakeLists.txt
hal_psee_plugins/psee_hw_layer_headers/include/metavision/psee_hw_layer/boards/v4l2/: v4l2_board_command.h
hal_psee_plugins/psee_hw_layer_headers/include/metavision/psee_hw_layer/devices/common/: antiflicker_filter.h
hal_psee_plugins/resources/rules/: CMakeLists.txt
hal_psee_plugins/src/boards/v4l2/: CMakeLists.txt  v4l2_board_command.cpp  v4l2_camera_discovery.cpp  v4l2_data_transfer.cpp  v4l2_device.cpp  v4l2_device_mmap.cpp  v4l2_user_ptr_data.cpp
hal_psee_plugins/src/devices/: CMakeLists.txt
hal_psee_plugins/src/devices/common/: antiflicker_filter.cpp
hal_psee_plugins/src/devices/gen31/: gen31_ccam5_tz_device.cpp  gen31_evk2_tz_device.cpp
hal_psee_plugins/src/devices/gen41/: gen41_evk2_tz_device.cpp  gen41_tz_device.cpp
hal_psee_plugins/src/devices/genx320/: genx320_cx3_tz_device.cpp
hal_psee_plugins/src/devices/imx636/: imx636_evk2_tz_device.cpp  imx636_rdk2_tz_device.cpp  imx636_tz_device.cpp
hal_psee_plugins/src/devices/imx646/: imx646_tz_device.cpp
hal_psee_plugins/src/devices/psee-video/: tz_psee_video.cpp
hal_psee_plugins/src/devices/v4l2/: CMakeLists.txt  v4l2_device_builder.cpp
hal_psee_plugins/src/plugin/: CMakeLists.txt
opencv/include/opencv2/: cvconfig.h  opencv_modules.hpp
opencv/lib/: libopencv_aruco.so.4.5.2  libopencv_bioinspired.so.4.5  libopencv_ccalib.so.4.5.2  libopencv_features2d.so.4.5  libopencv_hfs.so.4.5  libopencv_img_hash.so.4.5  libopencv_imgcodecs.so.4.5  libopencv_phase_unwrapping.so.4.5  libopencv_plot.so.4.5.2  libopencv_rapid.so.4.5  libopencv_rgbd.so.4.5  libopencv_structured_light.so.4.5  libopencv_viz.so.4.5.2  libopencv_xfeatures2d.so.4.5.2
opencv/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
sdk/modules/embedded/: CMakeLists.txt
sdk/modules/embedded/cmake/: MetavisionSDK_embeddedCPackConfig.cmake
sdk/modules/embedded/cpp/: CMakeLists.txt
sdk/modules/embedded/cpp/apps/: CMakeLists.txt
sdk/modules/embedded/cpp/apps/metavision_v4l2_viewer/: CMakeLists.txt  CMakeLists.txt.install  metavision_v4l2_viewer.cpp
sdk/modules/embedded/cpp/apps/v4l2_test_pat/: CMakeLists.txt  v4l2_test_pat.cpp
sdk/modules/embedded/cpp/include/metavision/sdk/embedded/: dma_buf_heap.h  v4l2_device.h
sdk/modules/embedded/cpp/lib/: CMakeLists.txt
